--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   http: ^0.13.5
   lottie: 2.2.0
   shared_preferences: 2.0.17
+  just_audio: 0.9.31
+  sqflite: 2.2.5
+  path_provider: 2.0.13
   flutter: 
     sdk: flutter
 
