--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   just_audio: 0.9.31
   sqflite: 2.2.5
   path_provider: 2.0.13
+  scroll_to_index: 3.0.1
   flutter: 
     sdk: flutter
 
